website/websites/u64q/code/richards.1.pyston.log

 Thu, 06 May 2021 22:51:33 GMT

COMMAND LINE:
 /usr/bin/pyston richards.pyston 10

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "richards.pyston", line 140
    print a,
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a, end=" ")?
